--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:worker": "opennextjs-cloudflare build && cp .open-next/worker.js .open-next/assets/_worker.js",
+    "build:worker": "opennextjs-cloudflare build && cp -R .open-next/cloudflare .open-next/middleware .open-next/server-functions .open-next/.build .open-next/assets/ 2>/dev/null || : && cp .open-next/worker.js .open-next/assets/_worker.js",
     "start": "next start",
     "lint": "next lint",
     "preview": "opennextjs-cloudflare preview && wrangler dev",
