fix: resolve translation errors, routing issues, and update deployment config
Translation & i18n Fixes:

- Fixed 'Translation category not found' errors by renaming hyphenated keys to camelCase in i18n/index.ts (local-seo → localSeo, web-development-services → webDevelopmentServices, service-areas → serviceAreas)

- Added missing translation keys to portfolio.json (en, fa, ar): keyResults, projectOverview, needSimilarProject, ctaDescription

- Added missing title and subtitle keys to web-development-services.json for all languages

- Added missing title and subtitle keys to contact.json for all languages

- Added companyName key to common.json for all languages

- Rewrote fa/seo.json, fa/local-seo.json to remove hidden characters causing JSON parse errors

Routing & Pages:

- Created dynamic portfolio detail route: src/app/[lang]/portfolio/[id]/page.tsx

- Created PortfolioDetail view component for individual project pages

- Fixed 404 errors on portfolio detail pages (e.g., /fa/portfolio/3)

Bug Fixes:

- Fixed hydration mismatch in LanguageSwitcher by adding mounted state check

- Fixed hydration mismatches in schema markup components (BlogPage, BlogPostPage, LocationPage, ServiceAreas)

- Fixed incorrect link to /local-seo-services (changed to /local-seo) in Services.tsx and Breadcrumb.tsx

Deployment Configuration:

- Updated wrangler.toml for Next.js deployment on Cloudflare Pages

- Changed project name from 'webabc' to 'webabc-next'

- Added nodejs_compat compatibility flag

- Updated build output directory to .vercel/output/static

- Updated package.json name and version (v1.0.0)

- Added deploy script for next-on-pages

Documentation:

- Added verification_plan.md for systematic page auditing

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "webabc_next_shadcn_ts",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "deploy": "next-on-pages deploy",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
