--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webabc_next_shadcn_ts",
+  "name": "webabc_next",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "next dev",
