--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@
   account_id = "ac07c7450925ccb475ebfc9ab75103e1"
   compatibility_flags = ["nodejs_compat_v2"]
   [assets]
-  directory = ".open-next/assets"
+  pages_build_output_dir = ".open-next/assets"
   binding = "ASSETS"
