--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,4 +4,6 @@ compatibility_date = "2025-03-25"
 account_id = "ac07c7450925ccb475ebfc9ab75103e1"
 compatibility_flags = ["nodejs_compat_v2"]
 
-pages_build_output_dir = ".open-next/assets"
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
