--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "images:optimize": "node scripts/optimize-images.mjs",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
@@ -16,6 +17,7 @@
     "@opennextjs/cloudflare": "^1.14.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.462.0",
     "next": "^16.0.8",
@@ -23,6 +25,7 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "resend": "^6.6.0",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -31,9 +34,11 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/glob": "^8.1.0",
     "@types/node": "^22.5.5",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
+    "@types/sharp": "^0.31.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-config-next": "^16.0.3",
@@ -42,6 +47,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "wrangler": "^4.54.0"
