--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.462.0",
-    "next": "16.0.8",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "next": "^16.0.10",
+    "react": "latest",
+    "react-dom": "latest",
     "react-markdown": "^10.1.0",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
