chore(config): upgrade to tailwind css v4 and update dependencies

--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.15",
     "@types/glob": "^8.1.0",
     "@types/node": "^22.5.5",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/sharp": "^0.31.1",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-config-next": "^16.0.7",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.0.1",
