--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@opennextjs/cloudflare": "^1.14.4",
     "class-variance-authority": "^0.7.1",
