--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251213.0",
     "@eslint/js": "^9.9.0",
+    "@next/bundle-analyzer": "^16.0.10",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@types/glob": "^8.1.0",
@@ -43,6 +44,7 @@
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@types/sharp": "^0.31.1",
+    "cross-env": "^10.1.0",
     "eslint": "^9.9.0",
     "eslint-config-next": "^16.0.7",
     "eslint-plugin-jsx-a11y": "^6.10.2",
