--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "next build --webpack",
     "start": "next start",
     "images:optimize": "node scripts/optimize-images.mjs",
-    "deploy": "next build --webpack && wrangler pages deploy out"
+    "deploy": "next build --webpack && wrangler pages deploy out",
+    "analyze": "next experimental-analyze"
   },
   "browserslist": [
-    "defaults",
+    "supports es6-module",
     "not ie 11",
     "not dead"
   ],
