--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "analyze": "next experimental-analyze"
   },
   "browserslist": [
-    "supports es6-module",
-    "not ie 11",
-    "not dead"
+    "chrome 111",
+    "edge 111",
+    "firefox 111",
+    "safari 16.4"
   ],
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.561.0",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.0",
     "qrcode.react": "^4.2.0",
     "react": "latest",
@@ -27,35 +28,31 @@
     "react-turnstile": "^1.1.4",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20251213.0",
-    "@eslint/js": "^9.9.0",
-    "@next/bundle-analyzer": "^16.0.10",
+    "@cloudflare/workers-types": "^4.20251218.0",
+    "@eslint/js": "^9.39.2",
+    "@next/bundle-analyzer": "^16.1.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
-    "@types/glob": "^8.1.0",
-    "@types/next": "^8.0.7",
-    "@types/node": "^22.5.5",
-    "@types/react": "^19.2.6",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@types/sharp": "^0.31.1",
-    "cross-env": "^10.1.0",
-    "eslint": "^9.9.0",
-    "eslint-config-next": "^16.0.7",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "glob": "^13.0.0",
-    "globals": "^15.9.0",
+    "globals": "^16.5.0",
     "gray-matter": "^4.0.3",
     "react-markdown": "^10.1.0",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.0.1",
-    "wrangler": "^4.54.0"
+    "typescript-eslint": "^8.50.0",
+    "wrangler": "^4.56.0"
   }
 }
